# PyIxNetwork

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.txt  conftest.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml  python-push.yml
docs/: Makefile  conf.py  index.rst  ixnetwork.api.rst  ixnetwork.rst  ixnetwork.test.rst  make.bat  mkdocs.yml
docs/_build/html/: .buildinfo  (+8 more)
docs/site/: 404.html  index.html
ixnetwork/: .gitignore  __init__.py  ixn_app.py  ixn_hw.py  ixn_interface.py  ixn_object.py  ixn_port.py  ixn_protocol.py  ixn_protocol_stack.py  ixn_root.py  ixn_statistics_view.py  ixn_tcl.py  ixn_topology.py  ixn_traffic.py
ixnetwork.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ixnetwork/api/: __init__.py  ixn_python.py  ixn_rest.py  ixn_tcl.py
ixnetwork/samples/: __init__.py  ixn_samples.py  rfc_2544.ixncfg  sample_ngpf.ixncfg
ixnetwork/tcl/: ixn_main.tcl
ixnetwork/test/: IxNetwork.ini  ixn_samples.py  test_base.py  test_config.py  test_offline.py  test_online.py  test_online_850.py  test_regression.py  test_regression_online.py  test_samples.py
tests/: IxNetwork.ini  __init__.py  conftest.py  sandbox.py  test_base.py  test_config.py  test_offline.py  test_online.py
tests/configs/: quick_test_classic.ixncfg  quick_test_ngpf.ixncfg  sample_ngpf_loopback.ixncfg  test_basic_config.ixncfg  test_config_assigned_classic.ixncfg  test_config_assigned_connected_classic.ixncfg  test_dd_ngpf.ixncfg  test_flow_groups.ixncfg  test_gui_traffic.ixncfg  test_load_config.ixncfg
(+35 files in other folders)
